GassanServiceImplTest: #26〜#73のJUnitテストを作成
チェックリスト#26〜#73に対応するGassanServiceImplのユニットテストを新規作成。

- #26-#27: reloadFacilityList（全件unchecked、checked設定）
- #28-#36:
getByGassanShiteiNo（基本取得、GassanUchi有無、代表施設、atenaName、rno系、異常系）
- #37-#45: getByGassanShiteiNoAndRno（同上）
- #46-#54: register（新規登録、再登録、代表施設null、年月逆転、前履歴チェック）
- #55-#58: updateByGassanShiteiNo（正常更新、存在なし、年月逆転、前履歴チェック）
- #59-#61: deleteByGassanShiteiNo（前履歴あり、1件のみ、対象なし）
- #62: getFacilitiesByAtenaNo
- #63-#66: validateNotAlreadyAssigned（未割当、null、空、登録済み）
- #67-#73: DB例外変換（null制約、一意制約、外部キー、その他制約、タイムアウト、その他、nullメッセージ）

テストへの影響
- 既存テストへの影響なし